--- a/src/Gistlyn.AppWinForms/packages.config
+++ b/src/Gistlyn.AppWinForms/packages.config
@@ -6,14 +6,16 @@
   <package id="CefSharp.WinForms" version="51.0.0" targetFramework="net46" />
   <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net45" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
-  <package id="ServiceStack" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Client" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Common" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Interfaces" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Redis" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Server" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Text" version="4.5.0" targetFramework="net46" />
+  <package id="ServiceStack" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Client" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Common" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Interfaces" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite.Sqlite" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Redis" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Server" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Text" version="4.5.9" targetFramework="net46" />
   <package id="Splat" version="1.6.2" targetFramework="net45" />
   <package id="squirrel.windows" version="1.3.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net46" />
 </packages>
