--- a/src/Gistlyn.Tests/packages.config
+++ b/src/Gistlyn.Tests/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.6.3" targetFramework="net45" />
-  <package id="ServiceStack" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Client" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Common" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Interfaces" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.OrmLite.Sqlite.Mono" version="4.5.0" targetFramework="net46" />
-  <package id="ServiceStack.Text" version="4.5.0" targetFramework="net46" />
+  <package id="NUnit" version="3.6.1" targetFramework="net46" />
+  <package id="ServiceStack" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Client" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Common" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Interfaces" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.OrmLite.Sqlite" version="4.5.9" targetFramework="net46" />
+  <package id="ServiceStack.Text" version="4.5.9" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net46" />
 </packages>
